--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -21,6 +21,7 @@
 <% end %>
 
 <p><%= link_to "Add a task", new_list_task_path(@list) %></p>
+<p><%= link_to "Edit a list", edit_list_path(@list) %></p>
 <p><%= link_to "Delete List", list_path(@list),
                         :data => {:confirm => "Are you sure?",
                                        :method => "delete"} %></p>
